--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -36,15 +36,15 @@
             <aside>
                 <article>
                     <h5>GAME SHOW</h5>
-                    <img src="../img/Action1.jpg" alt="">
+                    <img src="./img/Action1.jpg" alt="">
                 </article>
                 <article>
                     <h5>HOAT DONG 2</h5>
-                    <img src="../img/Action2.jpg" alt="">
+                    <img src="./img/Action2.jpg" alt="">
                 </article>
                 <article>
                     <h5>HOAT DONG 3</h5>
-                    <img src="../img/Action3.jpg" alt="">
+                    <img src="./img/Action3.jpg" alt="">
                 </article>
             </aside>
             <section>
